Add authentication protection and fix redirect flow
- Fix OAuth redirect to stay within TryYomi app
- Add auth check to simulation page (redirects to login if not authenticated)
- Protect simulator from unauthorized access
- Add score saving to Supabase (requires scores table)
- Show loading screen while checking auth

--- a/index.html
+++ b/index.html
@@ -584,7 +584,8 @@
                 const { data, error } = await supabase.auth.signInWithOAuth({
                     provider: 'google',
                     options: {
-                        redirectTo: window.location.href
+                        redirectTo: window.location.origin + '/index.html',
+                        scopes: 'email profile'
                     }
                 })
                 if (error) throw error
@@ -599,7 +600,8 @@
                 const { data, error } = await supabase.auth.signInWithOAuth({
                     provider: 'facebook',
                     options: {
-                        redirectTo: window.location.href
+                        redirectTo: window.location.origin + '/index.html',
+                        scopes: 'email public_profile'
                     }
                 })
                 if (error) throw error
@@ -660,6 +662,7 @@
         
         // Start simulation
         window.startSimulation = () => {
+            // Always require authentication
             if (!currentUser) {
                 openAuthModal()
                 return
